Prevent overflow of wide images

--- a/src/assets/style-slides.css
+++ b/src/assets/style-slides.css
@@ -12,6 +12,10 @@ html, body {
   box-shadow: none;
 }
 
+img {
+  max-width: 100%;
+}
+
 /**
  * !important declarations necessary to override element attributes defined by
  * Remark.js.
